--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
 <div class="container">
+    <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
     <button (click)="getFolders()">get folders</button>
 </div>
