--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,49 +1,66 @@
 /* You can add global styles to this file, and also import other style files */
-html, body {
-  margin: 0;
-  padding: 0;
+@import 'vars';
+@import 'theme';
 
-  height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+html,
+body {
+    height: 100%;
 }
 
-/* CAN (MUST) BE REMOVED ! Sample Global style */
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  background: url(./assets/background.jpg) no-repeat center fixed;
-  -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-  background-size: cover; /* version standardisée */
-
-  .title {
-    color: white;
+body {
     margin: 0;
-    padding: 50px 20px;
-  }
-
-  a {
-    color: #fff !important;
-    text-transform: uppercase;
-    text-decoration: none;
-    background: #ed3330;
-    padding: 20px;
-    border-radius: 5px;
-    display: inline-block;
-    border: none;
-    transition: all 0.4s ease 0s;
-
-    &:hover {
-      background: #fff;
-      color: #ed3330 !important;
-      letter-spacing: 1px;
-      -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-      -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-      box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
-      transition: all 0.4s ease 0s;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    
+    &.dark-theme {
+        background-color: #303030;
     }
-  }
+}
+
+.settings-sheet {
+    
+    &.mat-bottom-sheet-container {
+        width: 100vh;
+        height: 100vh;
+        max-width: 100%;
+        max-height: 100%;
+        padding: 0;
+    }
+    
+    &.mat-bottom-sheet-container-medium {
+        max-width: 100vh;
+        min-width: 100vw;
+    }
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: rgba(255, 255, 255, 0.0);
+}
+
+
+// folders
+.folder {
+    &__item {
+        cursor: pointer;
+        
+        &.noopened:not(.extract) {
+            cursor: not-allowed;
+        }
+        
+        &.extract {
+            box-shadow: inset 4px 0px 0px -1px rgba(0, 0, 0, 0.3);
+            border-radius: 2px;
+        }
+    }
+    
+    &__icon {
+        & + & {
+            margin-left: 1rem;
+        }
+    }
+    
+    &__date {
+        opacity: 0.6;
+        font-size: 10px;
+    }
 }
