feat: add sidebar template

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,8 @@
-:host {
-  
+.sidenav {
+    &-container {
+        height: calc(100% - 64px);
+    }
+    &-content {
+        height: 100%;
+    }
 }
