--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+
+
+<mat-drawer-container class="sidenav-container" autosize>
+    <mat-drawer class="sidenav-drawer" opened mode="side">
+        <app-sidebar></app-sidebar>
+    </mat-drawer>
+
+    <div class="sidenav-content">
+        <router-outlet></router-outlet>
+    </div>
+</mat-drawer-container>
