--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 
 <mat-drawer-container class="sidenav-container" autosize>
-    <mat-drawer class="sidenav-drawer" opened mode="side">
+    <mat-drawer class="sidenav-drawer" [opened]="sidebar.state | async" mode="side">
         <app-sidebar></app-sidebar>
     </mat-drawer>
 
