--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -1,4 +1,6 @@
 <mat-toolbar class="header">
-    <button mat-icon-button><mat-icon>menu</mat-icon></button>
+    <button mat-icon-button (click)="sidebar.toggle()">
+        <mat-icon>menu</mat-icon>
+    </button>
     <span>App</span>
 </mat-toolbar>
