--- a/src/app/main/folders/folders.component.html
+++ b/src/app/main/folders/folders.component.html
@@ -1,7 +1,7 @@
 <mat-nav-list>
     <mat-divider></mat-divider>
     <mat-list-item
-            *ngFor="let file of files"
+            *ngFor="let file of folder.currentFolder | async"
             class="folder__item">
 
         <!-- list content -->
