--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -1,14 +1,14 @@
 <div class="sidebar">
     <mat-nav-list>
-        <mat-list-item>
+        <mat-list-item (click)="getFolder('documents')">
             <mat-icon mat-list-icon>folder</mat-icon>
             <span>Documents</span>
         </mat-list-item>
-        <mat-list-item>
+        <mat-list-item (click)="getFolder('downloads')">
             <mat-icon mat-list-icon>folder</mat-icon>
             <span>Downloads</span>
         </mat-list-item>
-        <mat-list-item>
+        <mat-list-item (click)="getFolder('desktop')">
             <mat-icon mat-list-icon>folder</mat-icon>
             <span>Desktop</span>
         </mat-list-item>
