feat: add back btn in folders

--- a/src/app/main/folders/folders.component.html
+++ b/src/app/main/folders/folders.component.html
@@ -1,6 +1,6 @@
 <mat-nav-list class="folders">
     <mat-list-item
-            *ngFor="let file of folder.currentFolder | async"
+            *ngFor="let file of folder.dirFiles | async"
             (click)="scanFile(file)"
             class="folder__item">
 
