--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -3,4 +3,10 @@
         <mat-icon>menu</mat-icon>
     </button>
     <span>App</span>
+
+    <div class="header__nav">
+        <button mat-icon-button (click)="back()">
+            <mat-icon>arrow_back_ios</mat-icon>
+        </button>
+    </div>
 </mat-toolbar>
