--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -5,8 +5,9 @@
     <span>App</span>
 
     <div class="header__nav">
-        <button mat-icon-button (click)="back()">
+        <button mat-icon-button (click)="folder.back()">
             <mat-icon>arrow_back_ios</mat-icon>
         </button>
+        <app-header-search></app-header-search>
     </div>
 </mat-toolbar>
