--- a/src/app/main/header/header.component.scss
+++ b/src/app/main/header/header.component.scss
@@ -6,4 +6,9 @@
         margin-left: auto;
         @include flex(row, flex-end);
     }
+    
+    &__search {
+        margin-bottom: -1.34375em;
+        font-size: 12px;
+    }
 }
