--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
 
-<mat-drawer-container class="sidenav-container" autosize>
-    <mat-drawer class="sidenav-drawer" [opened]="sidebar.state | async" mode="side">
+<mat-drawer-container autosize class="sidenav-container">
+    <mat-drawer [opened]="sidebar.state | async" class="sidenav-drawer" mode="side">
         <app-sidebar></app-sidebar>
     </mat-drawer>
 
