--- a/src/app/main/header/header-search/header-search.component.html
+++ b/src/app/main/header/header-search/header-search.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="header__search">
-    <input matInput [formControl]="control" placeholder="Search...">
-    <button type="button" (click)="control.reset()" mat-icon-button matSuffix>
+    <input [formControl]="control" matInput placeholder="Search...">
+    <button (click)="control.reset()" mat-icon-button matSuffix type="button">
         <mat-icon>close</mat-icon>
     </button>
 </mat-form-field>
