feat: replace folders ctl from header

--- a/src/app/main/folders/folders.component.html
+++ b/src/app/main/folders/folders.component.html
@@ -1,28 +1,7 @@
 <div class="folders">
-    <div class="panel">
-
-        <div class="panel__left">
-            <button mat-icon-button matTooltip="List"
-                    [color]="template === 'list' && 'primary'"
-                    (click)="setTemplate('list')">
-                <mat-icon>list</mat-icon>
-            </button>
-            <button mat-icon-button matTooltip="Grid"
-                    [color]="template === 'grid' && 'primary'"
-                    (click)="setTemplate('grid')">
-                <mat-icon>view_module</mat-icon>
-            </button>
-        </div>
-
-        <div class="panel__right">
-            <button (click)="updateFolder()" class="links__update" mat-icon-button matTooltip="Обновить директорию">
-                <mat-icon>autorenew</mat-icon>
-            </button>
-            <button (click)="openFolder()" class="links__update" mat-icon-button matTooltip="Открыть в системе">
-                <mat-icon>open_in_browser</mat-icon>
-            </button>
-        </div>
-    </div>
+    <app-folders-navigation
+            (changeTpl)="setTemplate($event)">
+    </app-folders-navigation>
 
     <div class="folders__wrapper" [ngSwitch]="template">
         <folders-list *ngSwitchCase="'list'"></folders-list>
