--- a/src/app/main/folders/template/list/list.component.html
+++ b/src/app/main/folders/template/list/list.component.html
@@ -1,7 +1,7 @@
 <mat-nav-list class="folders">
     <mat-list-item
             (click)="scanFile(file)"
-            *ngFor="let file of (folder.dirFiles | async) | folderSearch:(header.searchInput | async)"
+            *ngFor="let file of (folder.dirFiles | async) | folderSearch:(search.searchInput | async)"
             class="folder__item">
 
         <mat-icon [svgIcon]="file.icon"></mat-icon>
