feat: add data to grid-template

--- a/src/app/main/folders/template/grid/grid.component.html
+++ b/src/app/main/folders/template/grid/grid.component.html
@@ -6,5 +6,6 @@
 
         <mat-icon class="grid__icon" [svgIcon]="file.icon" color="primary"></mat-icon>
         <span class="grid__title">{{file.name}}</span>
+        <span class="grid__date">{{file.lastModifier | date:'dd/MM/yy'}}</span>
     </div>
 </div>
