--- a/src/app/main/folders/template/grid/grid.component.scss
+++ b/src/app/main/folders/template/grid/grid.component.scss
@@ -29,4 +29,9 @@
         width: 55px;
         height: 55px;
     }
+    
+    &__date {
+        font-size: .7rem;
+        opacity: .7;
+    }
 }
