feat: add bread crumbs

--- a/src/app/main/folders/folders-navigation/folders-navigation.component.html
+++ b/src/app/main/folders/folders-navigation/folders-navigation.component.html
@@ -1,6 +1,6 @@
 <div class="panel">
     <div class="panel__path">
-        <span>{{folder.currentDir.split('/').slice(1).join(' > ')}}</span>
+        <app-folders-path></app-folders-path>
     </div>
     <mat-divider></mat-divider>
     <div class="panel__row">
